# PrincePedal

./: CMakeLists.txt  README.md  aax_builds.sh  win_builds.sh
.github/workflows/: cmake.yml
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  Prince.pkgproj  build_mac_installer.sh
installers/windows/: Prince_Install_Script.iss  build_win_installer.sh
models/: boost.json  dist.json  od.json
resources/: CMakeLists.txt
